[gd_scene load_steps=8 format=3 uid="uid://b7tqg3biaur5l"]

[ext_resource type="Script" path="res://assets/scripts/Enemy.gd" id="1_7pbhr"]
[ext_resource type="Texture2D" uid="uid://810wnwvk5kdf" path="res://assets/sprites/lieSpite-Sheet.png" id="2_of8ph"]
[ext_resource type="Script" path="res://assets/scripts/CombatComponent.gd" id="3_x0ymg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5bjtd"]
atlas = ExtResource("2_of8ph")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydjhc"]
atlas = ExtResource("2_of8ph")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_lfbdv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5bjtd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydjhc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="BoxShape3D" id="BoxShape3D_dogcu"]

[node name="Enemy" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1, 2)
script = ExtResource("1_7pbhr")

[node name="Sprite" type="AnimatedSprite3D" parent="."]
transform = Transform3D(-8.74228e-08, 0, 2, 0, 2, 0, -2, 0, -8.74228e-08, 0, 0, 0)
centered = false
offset = Vector2(-40, -30)
flip_h = true
sprite_frames = SubResource("SpriteFrames_lfbdv")
autoplay = "default"

[node name="EnemyLight" type="OmniLight3D" parent="."]
light_color = Color(0.564706, 0.364706, 0.929412, 1)
light_energy = 0.2
light_specular = 0.1
omni_range = 2.0
omni_attenuation = 1.03526
omni_shadow_mode = 0

[node name="CastNorth" type="RayCast3D" parent="."]
target_position = Vector3(-1.5, 0, 0)
collide_with_areas = true

[node name="CastEast" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -1.5)
collide_with_areas = true

[node name="CastSouth" type="RayCast3D" parent="."]
target_position = Vector3(1.5, 0, 0)
collide_with_areas = true

[node name="CastWest" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, 1.5)
collide_with_areas = true

[node name="CombatComponent" type="Node" parent="."]
script = ExtResource("3_x0ymg")

[node name="Area" type="Area3D" parent="."]
priority = 1

[node name="Shape" type="CollisionShape3D" parent="Area"]
transform = Transform3D(1.4, 0, 0, 0, 1.4, 0, 0, 0, 1.4, 0, 0, 0)
shape = SubResource("BoxShape3D_dogcu")

[node name="PlayerVisible" type="VisibleOnScreenNotifier3D" parent="."]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 0, 0)

[connection signal="screen_entered" from="PlayerVisible" to="." method="_on_player_visible_screen_entered"]
[connection signal="screen_exited" from="PlayerVisible" to="." method="_on_player_visible_screen_exited"]
